--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <button
-            onclick="window.open('https://docs.google.com/document/d/15ueKCODvedyZgX54V3bPYcbzdXvbacUV/edit?usp=share_link&ampouid=109459317426614528036&amprtpof=true&ampsd=true')"
+            onclick="window.open('https://docs.google.com/document/d/1Iy3hkyGQcETnylMZMm1rwP3NwPB78i4ZZxGQLdgkhPI/edit?usp=sharing')"
             class="resume-button">
             View Resume
         </button>
