--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <button
-            onclick="window.open('https://docs.google.com/document/d/1Iy3hkyGQcETnylMZMm1rwP3NwPB78i4ZZxGQLdgkhPI/edit?usp=sharing')"
+            onclick="window.open('https://docs.google.com/document/d/1G55FfebNwl7LOAyj_Sv50bl3pydGtzoc/edit?usp=sharing&ouid=109459317426614528036&rtpof=true&sd=true')"
             class="resume-button">
             View Resume
         </button>
